fixed alignment of the to address on correspondence letters.

--- a/css/printcontent-left.css
+++ b/css/printcontent-left.css
@@ -169,7 +169,6 @@ body {
 }
 
 .toAddress {
-	padding-left:5em;
 	padding-top:3em;
 	width:200px;
 }
